--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -12,12 +12,27 @@
   -->
   <link rel="stylesheet" href="/css/application.css">
 
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script src="/js/application.js"></script>
 
-  <title></title>
+  <title>For All</title>
 </head>
 <body>
-  <%= yield %>
+  <nav>
+    <ul>
+    <% if @current_user %>
+      <li><a href='/'>Home</a></li>
+      <li><a href='/users/<%=@current_user.id%>/profile'>Profile</a></li>
+      <li><a href='/users/<%=@current_user.id%>/settings'>Settings</a></li>
+    <% else %>
+      <li><a href='/'>Home</a></li>
+      <li><a href='/sessions/new'>Login</a></li>
+      <li><a href='/users/new'>Register</a></li>
+    <% end %>
+    </ul>
+  </nav>
+  <div id=body-content>
+    <%= yield %>
+  </div>
 </body>
 </html>
