--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -1,37 +1,61 @@
-<h3 class=entry-form-heading>Register</h3>
+<div class=form-holder>  
+  <h3 class=entry-form-heading>Register</h3>
 
-<form class=entry-form action="/users" method="POST">
+  <form class=entry-form action="/users" method="POST">
 
-  <div class=form-section id=basic-info>
-    <label for="name">Name</label>
-    <input type="text" id=name name="user[name]" placeholder="Full Name">
-    <label for="name">Email</label>
-    <input type="text" id=email name="user[email]" placeholder="Email">
-    <label for="password">Password</label>
-    <input type="password" id=password name="user[password]" placeholder="Password">
-    <label for="confirm-password">Confirm Password</label>
-    <input type="password" id=confirm-password name="password_confirmation" placeholder="Email">
-  </div>
+    <div class=form-section id=basic-info>
+      <div class=form-row>
+        <label for="name">Name</label>
+        <input type="text" id=name name="user[name]" placeholder="Full Name">
+      </div>
+      <div class=form-row>
+        <label for="name">Email</label>
+        <input type="text" id=email name="user[email]" placeholder="Email">
+      </div>
+      <div class=form-row>
+        <label for="password">Password</label>
+        <input type="password" id=password name="user[password]" placeholder="Password">
+      </div>
+      <div class=form-row>
+        <label for="confirm-password">Confirm Password</label>
+        <input type="password" id=confirm-password name="password_confirmation" placeholder="Email">
+      </div>
+    </div>
 
-  <div class=form-section id=voting-location>
-    <label for="street">Street Address</label>
-    <input type="text" id=street name="user[street]" placeholder="1010 Main St">
-    <label for="Unit">Unit</label>
-    <input type="text" id=unit name="user[unit]" placeholder="11">
-    <label for="city">City</label>
-    <input type="text" id=city name="user[city]" placeholder="Capitol City">
-    <label for="state">State</label>
-    <input type="text" id=state name="user[state]" placeholder="CA">
-    <label for="zip">Zip Code</label>
-    <input type="text" id=zip name="user[zip]" placeholder="98765">
-  </div>
+    <div class=form-section id=voting-location>
+      <div class=form-row>
+        <label for="street">Street Address</label>
+        <input type="text" id=street name="user[street]" placeholder="1010 Main St">
+      </div>
+      <div class=form-row>
+        <label for="Unit">Unit</label>
+        <input type="text" id=unit name="user[unit]" placeholder="11">
+      </div>
+      <div class=form-row>
+        <label for="city">City</label>
+        <input type="text" id=city name="user[city]" placeholder="Capitol City">
+      </div>
+      <div class=form-row>
+        <label for="state">State</label>
+        <input type="text" id=state name="user[state]" placeholder="CA">
+      </div>
+      <div class=form-row>
+        <label for="zip">Zip Code</label>
+        <input type="text" id=zip name="user[zip]" placeholder="98765">
+      </div>
+    </div>
 
-  <div class=form-section id=demo-info>
-    <label for="age">Age</label>
-    <input type="text" id=age name="user[age]" placeholder="35">
-    <label for="party">Party</label>
-    <input type="text" id=party name="user[party]" placeholder="Independent">
-  </div>
+    <div class=form-section id=demo-info>
+      <div class=form-row>
+        <label for="age">Age</label>
+        <input type="text" id=age name="user[age]" placeholder="35">
+      </div>
+      <div class=form-row>
+        <label for="party">Party</label>
+        <input type="text" id=party name="user[party]" placeholder="Independent">
+      </div>
+    </div>
 
-  <input type="submit" value="Create Account">
-</form>
+    <input type="submit" value="Create Account">
+  </form>
+</div>
