--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,12 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- 
-    normalize.css removes cross-browser differences in defaults, e.g.,
-    differences in how form elements appear between Firefox and IE
-    See: http://necolas.github.com/normalize.css/
-  -->
-  <link rel="stylesheet" href="/css/normalize.css">
   <!--
     application.css is where you put your styles
   -->
@@ -23,7 +17,12 @@
     <% if logged_in? %>
       <li><a href='/'>Home</a></li>
       <li><a href='/users/<%=@current_user.id%>/profile'>Profile</a></li>
-      <li><a href='/users/<%=@current_user.id%>/settings'>Settings</a></li>
+      <li>
+        <form action='/sessions/<%= current_user.id %>' method='POST'>
+          <input type='hidden' name='_method' value="delete">
+          <input id='logout_link' type='submit' value="Logout">
+        </form>
+      </li>
     <% else %>
       <li><a href='/'>Home</a></li>
       <li><a href='/sessions/new'>Login</a></li>
