Add candidates, races, and associations; CSV seed

--- a/app/views/representatives/show.erb
+++ b/app/views/representatives/show.erb
@@ -5,6 +5,6 @@
   <p class=little-data><%= representative.state %></p>
   <p class=little-data><%= representative.party %></p>
   <p class=little-data><%= representative.phone %></p>
-  <p class=little-data><%= representative.website_url %></p>
+  <a href='<%= representative.website_url %>'><%= representative.website_url %></p>
   <p class=little-data>@<%= representative.twitter_id %></p>
 </div>
