--- a/app/views/representatives/show.erb
+++ b/app/views/representatives/show.erb
@@ -1,4 +1,4 @@
-<div id=show-data>
+<div id='show-data1'>
   <h3 class=primary-heading><%= representative.name %></h3>
   <h4 class=sub-heading><%= representative.offices.first.name %></h4>
   <img id=primary-image src="<%= representative.photo_url %>">
