Complete Passion Project for Presentation

--- a/app/views/initiatives/index.erb
+++ b/app/views/initiatives/index.erb
@@ -1,6 +1,6 @@
 <div class='index-container'>
 
-  <% initiatives.each do |race| %>
+  <% initiatives.each do |initiative| %>
   <div>
     <a class='index-item3' href="/initiatives/<%= initiative.id %>"><%= initiative.title %></a>
   </div>
